[project]
name = "tres"
version = "0.1.0"
description = "An open-source identity intelligence engine."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Joao Pinheiro" }
]

dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"